--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>JSNES: A JavaScript NES emulator</title>
+    <title>nes emulator</title>
 </head>
 
 <body>
-    <h1>JSNES</h1>
-
-    <div id="emulator"></div>
+    <div id="memory" style='width: 100%'></div>
+    <div id="emulator" style='width: 50%'></div>
 
     <h2>Controls</h2>
     <table id="controls">
@@ -105,9 +104,9 @@
                     ]
                 })
             });
-            console.log('here')
+            // console.log('here')
         });
     </script>
-    <script src='automate.js'></script>
+    <script src='viz/viz.js'></script>
 </body>
 </html>
