--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="memory" style='width: 100%'></div>
     <div id="emulator" style='width: 50%'></div>
 
-    <h2>Controls</h2>
+    <!-- <h2>Controls</h2>
     <table id="controls">
         <tr>
             <th>Button</th>
@@ -55,7 +55,7 @@
             <td>Ctrl</td>
             <td>Num-3</td>
         </tr>
-    </table>
+    </table> -->
 
     <script src="lib/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="lib/dynamicaudio-min.js" type="text/javascript" charset="utf-8"></script>
