--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>nes emulator</title>
+    <style>
+      .nes-screen {
+        width: 100%;
+      }
+      #memory {
+        width: 49%;
+        float: right;
+      }
+      #emulator {
+        width: 50%;
+        float: left;
+      }
+    </style>
 </head>
 
 <body>
-    <div id="memory" style='width: 50%'></div>
-    <div id="emulator" style='width: 50%'></div>
+
+    <div id="memory"></div>
+    <div id="emulator"></div>
+
 
     <!-- <h2>Controls</h2>
     <table id="controls">
