--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         width: 50%;
         float: left;
       }
+      #input_recorder {
+        width: 49%;
+        float: right;
+        margin-bottom: 10px;
+        padding-bottom: 4px;
+        background-color: rgba(0,0,0,0.1);
+      }
+
+      #dopers {
+        width: 49%;
+        float: right;
+      }
+
     </style>
 </head>
 
@@ -22,6 +35,8 @@
 
     <div id="memory"></div>
     <div id="emulator"></div>
+    <div id='input_recorder'></div>
+    <div id='dopers'></div>
 
 
     <!-- <h2>Controls</h2>
