--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </table> -->
 
     <script src="lib/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="lib/dynamicaudio-min.js" type="text/javascript" charset="utf-8"></script>
+    <!-- <script src="lib/dynamicaudio-min.js" type="text/javascript" charset="utf-8"></script> -->
     <script src="source/nes.js" type="text/javascript" charset="utf-8"></script>
     <script src="source/utils.js" type="text/javascript" charset="utf-8"></script>
     <script src="source/cpu.js" type="text/javascript" charset="utf-8"></script>
