some ui updates

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
       #dopers {
         width: 100%;
       }
+      .doper_container {
+        float: left;
+        width: 50%;
+      }
+      .doper-value {
+        float: right;
+        padding: 4px;
+        outline: 1px solid rgb(200,200,200);
+        margin-right: 4px;
+        color: black;
+      }
     </style>
 </head>
 
@@ -41,7 +52,7 @@
 
     </div>
     <div style='display: block; width:100%'>
-      <div id='dopers'></div>
+      <div id='dopers' style='display: inline-block;'></div>
     </div>
 
     <!-- <h2>Controls</h2>
